--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="result">
-            <p>Paper covers rock. You win!</p>
+            <p>Click on an icon to begin the game !</p>
         </div>
         
         <!-- Creating rock, paper, scissor options -->
